cmake_minimum_required(VERSION 3.9)

aux_source_directory(libftsrc/else ELSE)
aux_source_directory(libftsrc/lst LST)
aux_source_directory(libftsrc/mem MEM)
aux_source_directory(libftsrc/put PUT)
aux_source_directory(libftsrc/str STR)
aux_source_directory(printfsrc PRINTF)
add_library(ft STATIC ${ELSE} ${LST} ${MEM} ${PUT} ${STR} ${PRINTF})
include_directories(libftsrc includes)